# keywords

./: README.md  client.py  index.html  main.py  notebook.ipynb  pyproject.toml  server.py  transfer_learning.ipynb
.ipynb_checkpoints/: notebook-checkpoint.ipynb  server-checkpoint.py  transfer_learning-checkpoint.ipynb
sound_instructions/: fingerprint.pb  saved_model.pb
sound_instructions/variables/: variables.index
src/: AudioMutations.py  ExportModel.py  record_clip.py
src/.ipynb_checkpoints/: AudioMutations-checkpoint.py  AudioUtils-checkpoint.py  plot_wave-checkpoint.py
