[project]
name = "keywords"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "pyaudio>=0.2.14",
    "pydot>=4.0.1",
    "rich>=14.2.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.20.0",
    "tensorflow-datasets>=4.9.9",
]
