[project]
name = "keywords"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.123.5",
    "librosa>=0.11.0",
    "matplotlib>=3.10.7",
    "numpy>=2.2.6",
    "onnx>=1.20.0",
    "pyaudio>=0.2.14",
    "pydot>=4.0.1",
    "rich>=14.2.0",
    "seaborn>=0.13.2",
    "sounddevice>=0.5.3",
    "tensorflow>=2.20.0",
    "tensorflow-datasets>=4.9.9",
    "tensorflow-hub>=0.16.1",
    "tf2onnx>=1.8.4",
    "websockets>=15.0.1",
]
